Renaming an endpoint in the name of HATEOAS discovery
